# cpp-snake-game

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
src/: AISnake.cpp  AISnake.h  Constants.h  Food.cpp  Food.h  FunnyMessages.cpp  FunnyMessages.h  Game.cpp  Game.h  GameMode.h  GradientBackground.cpp  GradientBackground.h  Grid.cpp  Grid.h  Obstacle.cpp  Obstacle.h  ParticleSystem.cpp  ParticleSystem.h  PowerUp.cpp  PowerUp.h  Snake.cpp  Snake.h  SoundManager.h  Stats.h  main.cpp
